# cpp-platform-noodling-v1

./: .travis.yml  README.md  grim  grim_game.cpp  grim_gl.h  grim_math.h  grim_platform.cpp  grim_platform.h  grim_surface.h
template/: CMakeLists.txt  Makefile  grim_game_template.cpp
